<resources>
    <string name="app_name">FOOD ON</string>
    <string name="food">FOOD ON</string>
    <string name="sign_with_email">sign with email</string>
    <string name="sign_with_phone">sign with phone</string>
    <string name="or">or</string>
    <string name="sign_up">sign up</string>
    <string name="offer">Find handmade food around you or offer your own!</string>
    <string name="cc">connect as chef</string>
    <string name="connect_as_customer">connect as customer</string>
    <string name="delivery">connect as delievery person</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="mobilenumber">MobileNumber</string>
    <string name="house_street_no">House/Street no</string>
    <string name="area">Area</string>
    <string name="pin_code">Pin Code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="register">Register</string>
    <string name="signin_with">SignIn With</string>
    <string name="phone">phone</string>
    <string name="localaddress">LocalAddress</string>
    <string name="email_Id">Email id</string>
    <string name="forget_password">Forget Password?</string>
    <string name="login">Login</string>
    <string name="don_t_ave_an_account_create">Dont Have An Account? Create</string>
    <string name="or1">OR</string>
    <string name="sihgnIn_with">SihnIn With</string>
    <string name="phonee">Phone</string>
    <string name="verify_phone_nomber">Verify Phone Nomber</string>
    <string name="send_otp">send OTP</string>
    <string name="dont_have_an_account_sign_up">Dont Have An Account? Sign Up</string>
    <string name="email">Email</string>
    <string name="town">Maharashtra</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="otp">otp</string>
    <string name="verify">VERIFY</string>
    <string name="resend_otp">resend otp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>