<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img3"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="@dimen/dp220w"
        android:layout_height="@dimen/dp350h"
        android:background="@color/white"
        android:src="@drawable/white_bg"
        android:layout_marginTop="@dimen/dp120h"
        android:layout_marginStart="@dimen/dp50w"
        android:layout_marginLeft="@dimen/dp50w"
        tools:ignore="MissingConstraints"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15h">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/firstname"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/lastname"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:padding="@dimen/dp10w"
                    android:hint="@string/email_id"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h"
                android:orientation="horizontal">

                <com.hbb20.CountryCodePicker
                    android:layout_width="@dimen/dp120w"
                    android:layout_height="match_parent"
                    android:id="@+id/ctrycode">

                </com.hbb20.CountryCodePicker>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/mobilenumber"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Houseno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/house_street_no"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Areaa"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/area"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/Pincodee"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp11h">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pin_code"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt1"
                android:text="@string/state"
                android:textSize="@dimen/sp14"
                android:textStyle="bold"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/State"
                android:layout_marginTop="@dimen/dp5h"
                android:entries="@array/State"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txt4"
                android:text="@string/city"/>

            <Spinner
                android:id="@+id/City"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5h"/>

            <Button
                android:id="@+id/Signupp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp40h"
                android:layout_marginTop="@dimen/dp20h"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:textSize="@dimen/sp18"
                android:textColor="@color/white"
                android:background="@drawable/btn_bg"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp5h"
                android:orientation="horizontal">

                <TableRow
                    android:id="@+id/hr"
                    android:layout_width="@dimen/dp100w"
                    android:layout_height="@dimen/dp1h"
                    android:layout_marginTop="@dimen/dp20h"
                    android:background="#595858"/>


                <TextView
                    android:layout_width="@dimen/dp44w"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/OR"
                    android:layout_marginTop="@dimen/dp7h"
                    android:text="OR"
                    android:textAlignment="center"
                    android:textColor="#040404"
                    android:textSize="@dimen/sp17"/>

                <TableRow
                    android:id="@+id/dr"
                    android:layout_width="@dimen/dp100w"
                    android:layout_height="@dimen/dp1h"
                    android:layout_marginTop="@dimen/dp20h"
                    android:background="#595858"/>


            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5h"
                android:id="@+id/tvv"
                android:text="@string/signin_with"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textColor="#0C0C0C"
                android:textSize="@dimen/sp18"/>

   <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

       <Button
           android:id="@+id/emaillid"
           android:layout_marginTop="@dimen/dp5h"
           android:drawableLeft="@drawable/ic_baseline_mail_24"
           android:layout_width="wrap_content"
           android:layout_height="@dimen/dp35h"
           android:background="@drawable/btn_bg"
           android:layout_marginStart="@dimen/dp5w"
           android:text="@string/email"
           android:textColor="@color/white" />

       <Button
           android:text="@string/phone"
           android:layout_marginTop="@dimen/dp5h"
           android:textColor="@color/white"
           android:background="@drawable/btn_bg_blue"
           android:id="@+id/Phonenumber"
           android:layout_width="wrap_content"
           android:layout_height="@dimen/dp35h"
           android:layout_marginStart="@dimen/dp5w"
           android:drawableLeft="@drawable/ic_baseline_local_phone_24"/>

   </LinearLayout>
   </LinearLayout>
            </ScrollView>
    </LinearLayout>